# midi2vol-mac-app

./: LICENCE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
